Refactored the sql into the mappings files.